<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_fragment_shopping_lists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                tools:context=".ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/recyclerView"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab"
        style="@style/FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="showAddListDialog"
        android:src="@drawable/icon_add"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/white" />
</RelativeLayout>